--- a/src/main/res/layout/activity_login.xml
+++ b/src/main/res/layout/activity_login.xml
@@ -149,7 +149,7 @@
                         android:textColor="@drawable/selector_btn_text_color_white_gray" />
 
                     <TextView
-                        android:id="@+id/btnRegister"
+                        android:id="@+id/btnNext"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
