--- a/src/main/res/layout/activity_register.xml
+++ b/src/main/res/layout/activity_register.xml
@@ -25,15 +25,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <android.support.v7.widget.CardView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginTop="10dp"
-                app:cardCornerRadius="40dp"
-                app:cardElevation="5dp">
-
-            </android.support.v7.widget.CardView>
-
 
             <android.support.v7.widget.CardView
                 android:layout_width="300dp"
@@ -41,7 +32,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="-40dp"
+                android:layout_marginTop="10dp"
                 app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="5dp"
                 app:cardElevation="5dp">
@@ -95,9 +86,11 @@
                             android:layout_weight="1"
                             app:hint="验证码"
                             app:inputType="number"
+                            app:maxLength="4"
                             app:title="验证码：" />
 
                         <TextView
+                            android:id="@+id/btnGetVerifyCode"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/selector_chat_round_btn_yellow_gray_bg"
@@ -123,7 +116,7 @@
 
 
                     <TextView
-                        android:id="@+id/btnRegister"
+                        android:id="@+id/btnNext"
                         android:layout_width="140dp"
                         android:layout_height="45dp"
                         android:layout_gravity="center_horizontal"
@@ -133,7 +126,7 @@
                         android:enabled="false"
                         android:focusable="true"
                         android:gravity="center"
-                        android:text="注册"
+                        android:text="下一步"
                         android:textColor="@drawable/selector_btn_text_color_white_gray" />
 
                     <TextView
@@ -158,21 +151,6 @@
 
 
         </LinearLayout>
-
-
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/sdvHeader"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:placeholderImage="@drawable/ic_user_choose_head"
-            app:placeholderImageScaleType="fitCenter"
-            app:roundAsCircle="true"
-            app:roundingBorderColor="@color/white"
-            app:roundingBorderWidth="2dp" />
 
 
     </android.support.constraint.ConstraintLayout>
