--- a/src/main/res/layout/activity_register_next.xml
+++ b/src/main/res/layout/activity_register_next.xml
@@ -9,7 +9,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -25,6 +25,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <android.support.v7.widget.CardView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="10dp"
+                app:cardCornerRadius="40dp"
+                app:cardElevation="5dp">
+
+            </android.support.v7.widget.CardView>
+
 
             <android.support.v7.widget.CardView
                 android:layout_width="300dp"
@@ -32,10 +41,11 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="-40dp"
                 app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="5dp"
                 app:cardElevation="5dp">
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -48,10 +58,10 @@
                         android:id="@+id/inputLayout1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:hint="@string/string_register_activity_1"
+                        app:hint="请您输入账号"
                         app:inputType="number"
                         app:maxLength="11"
-                        app:title="@string/string_register_activity_2" />
+                        app:title="账号：" />
 
                     <View
                         android:layout_width="match_parent"
@@ -62,51 +72,23 @@
                         android:id="@+id/inputLayout2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:hint="@string/string_register_activity_3"
+                        app:hint="请您输入密码"
                         app:inputType="password"
                         app:maxLength="16"
-                        app:title="@string/string_register_activity_4" />
+                        app:title="密码：" />
 
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="0.5dp"
                         android:background="@color/line_color" />
 
-                    <LinearLayout
+                    <cn.woyeshi.base.views.InputLayoutView
+                        android:id="@+id/inputLayout3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <cn.woyeshi.base.views.InputLayoutView
-                            android:id="@+id/inputLayout3"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            app:hint="@string/string_code_hint"
-                            app:inputType="number"
-                            app:maxLength="4"
-                            app:title="@string/string_code_title" />
-
-                        <TextView
-                            android:id="@+id/btnGetVerifyCode"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/selector_chat_round_btn_yellow_gray_bg"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:gravity="center"
-                            android:paddingBottom="5dp"
-                            android:paddingLeft="10dp"
-                            android:paddingRight="10dp"
-                            android:paddingTop="5dp"
-                            android:text="@string/string_get_verify_code"
-                            android:textColor="@drawable/selector_btn_text_color_white_gray"
-                            android:textSize="@dimen/text_size_t3" />
-
-
-                    </LinearLayout>
-
+                        app:hint="请您输入邀请码（选填）"
+                        app:inputType="number"
+                        app:title="邀请码：" />
 
                     <View
                         android:layout_width="match_parent"
@@ -115,7 +97,7 @@
 
 
                     <TextView
-                        android:id="@+id/btnNext"
+                        android:id="@+id/btnLogin"
                         android:layout_width="140dp"
                         android:layout_height="45dp"
                         android:layout_gravity="center_horizontal"
@@ -125,23 +107,8 @@
                         android:enabled="false"
                         android:focusable="true"
                         android:gravity="center"
-                        android:text="@string/string_register_activity_5"
+                        android:text="提交"
                         android:textColor="@drawable/selector_btn_text_color_white_gray" />
-
-                    <TextView
-                        android:id="@+id/btnLogin"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="11dp"
-                        android:background="@drawable/selector_bg_trans_gray"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:padding="5dp"
-                        android:text="@string/string_register_activity_6"
-                        android:textColor="@color/n_gray_2"
-                        android:textSize="@dimen/text_size_t3" />
-
 
                 </LinearLayout>
 
@@ -150,6 +117,21 @@
 
 
         </LinearLayout>
+
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/sdvHeader"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:placeholderImage="@drawable/ic_user_head_default"
+            app:placeholderImageScaleType="fitCenter"
+            app:roundAsCircle="true"
+            app:roundingBorderColor="@color/white"
+            app:roundingBorderWidth="2dp" />
 
 
     </android.support.constraint.ConstraintLayout>
