--- a/src/main/res/layout/activity_login.xml
+++ b/src/main/res/layout/activity_login.xml
@@ -82,22 +82,10 @@
                         android:layout_height="0.5dp"
                         android:background="@color/line_color" />
 
-                    <cn.woyeshi.base.views.InputLayoutView
-                        android:id="@+id/inputLayout3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:hint="请您输入邀请码（选填）"
-                        app:inputType="number"
-                        app:title="邀请码：" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:background="@color/line_color" />
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
 
