--- a/src/main/res/layout/activity_splash.xml
+++ b/src/main/res/layout/activity_splash.xml
@@ -27,19 +27,20 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:srcCompat="@drawable/ic_font_4" />
+        app:srcCompat="@drawable/ic_font_5" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="160dp"
         android:layout_height="40dp"
         android:layout_marginTop="28dp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
