--- a/src/main/res/layout/activity_find_password.xml
+++ b/src/main/res/layout/activity_find_password.xml
@@ -30,7 +30,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/date_pick_white"
                 app:cardCornerRadius="5dp"
                 app:cardElevation="5dp">
 
