--- a/src/main/res/layout/activity_register.xml
+++ b/src/main/res/layout/activity_register.xml
@@ -33,7 +33,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/date_pick_white"
                 app:cardCornerRadius="5dp"
                 app:cardElevation="5dp">
 
