location sdk integrate completed ...

--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,3 +1,7 @@
 <resources>
 
+    <style name="Theme.Splash" parent="ImageTranslucentTheme">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
+
 </resources>
